--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,9 +23,9 @@ services:
       - "127.0.0.1:65008:80"
       - "127.0.0.1:65003:443"
     volumes:
-      - /etc/nginx/cert/nginx.crt:/usr/local/apache2/conf/server.crt:ro
-      - /etc/nginx/cert/nginx.key:/usr/local/apache2/conf/server.key:ro
-      - /data/tpot2csv/log:/usr/local/apache2/logs:rw
+      - "/data/nginx/cert/nginx.crt:/usr/local/apache2/conf/server.crt:ro"
+      - "/data/nginx/cert/nginx.key:/usr/local/apache2/conf/server.key:ro"
+      - "/data/tpot2csv/log:/usr/local/apache2/logs:rw"
     networks:
       - etc_default
 
