SSL compression not supported by ssl library

--- a/tpot2csv.conf.dist
+++ b/tpot2csv.conf.dist
@@ -8,7 +8,7 @@ ServerSignature Off
 ServerTokens Prod
 
 #CIS benchmarks, Apache, 7.7
-SSLCompression off
+#SSLCompression off
 
 #CIS benchmarks, Apache, 7.6
 SSLInsecureRenegotiation Off
