--- a/tpot2csv.ini
+++ b/tpot2csv.ini
@@ -5,5 +5,5 @@ proto=http
 index=logstash-*
 filterfile=/opt/tpot2csv/query.json
 [Output]
-folder=/opt/tpot2csv
-filename=output.csv
+folder=/usr/local/apache2/htdocs
+filename=feed.csv
