--- a/httpd.conf
+++ b/httpd.conf
@@ -505,7 +505,7 @@ LogLevel warn
 # necessary.
 
 # Server-pool management (MPM specific)
-#Include conf/extra/httpd-mpm.conf
+Include conf/extra/httpd-mpm.conf
 
 # Multi-language error messages
 #Include conf/extra/httpd-multilang-errordoc.conf
